@@ -1,3 +1,4 @@
+	* fix read-piece response for cancelled deadline-pieces
 	* fixed file priority vector-overrun
 	* fix potential packet allocation alignment issue in utp
 	* make 'close_redudnant_connections' cover more cases
